--- a/index.html
+++ b/index.html
@@ -174,27 +174,33 @@
     <!-----contact----->
 <div id="contact">
     <div class="container">
+        <div class="row">
         <div class="contact-left">
-            <h1 class="Sub-title">Contact me</h1>
-            <p>sabitpradhan4@gmail.com</p>
-            <P>7008193677</P>
+            <h1 class="Sub-title">Contact Me</h1>
+            <p><i class="fas fa-paper-plane"></i>sabitpradhan4@gmail.com</p>
+            <P><i class=" fas fa-phone-from-square-alt"></i>7008193677</P>
             <div class="social-icons">
-
                 <a href="#"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-twitter"></i></a>
                 <a href="#"><i class="fa-brands fa-square-instagram"></i></a>
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
             </div>
+            <a href="images/sabit kumar pradhan.pdf" download class="btn btn2">Donwload Cv</a>
         </div>
         <div class="contact-right">
             <form>
                 <input type="text" name="Name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="Message" rows="6"></textarea>
+                <textarea name="Message" rows="6" placeholder="Your Message"></textarea>
+                <button type="submit" class="btn btn2">submit</button> 
             </form>
         </div>
     </div>
+    <div class="Copyright">
+        <P>Copyright <i class="fa-solid fa-computer"></i>@Sabit Kumar Pradhan</P>
+    </div>
 </div>
+    </div>
     <script>
         var tablinks = document.getElementsByClassName("tab-links");
         var tabcontents = document.getElementsByClassName("tab-contents");
